# video-editor

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/h/arrow/videoeditor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/h/arrow/videoeditor/activity/: MainActivity.java  VideoLiveActivity.java  VideoPlayActivity.java
app/src/main/java/com/h/arrow/videoeditor/utils/: ThreadPool.java  Utils.java
app/src/main/res/layout/: activity_live_play.xml  activity_main.xml  activity_video_play.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/h/arrow/videoeditor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
medialibrary/: CMakeLists.txt  build.gradle
medialibrary/src/androidTest/java/com/ah/me/player/: ExampleInstrumentedTest.java
medialibrary/src/main/: AndroidManifest.xml
medialibrary/src/main/cpp/: CMakeLists.txt
medialibrary/src/main/cpp/SoundTouch/source/SoundTouch/: FIFOSampleBuffer.cpp
medialibrary/src/main/cpp/callback_fun/: av_stream_callback.h
medialibrary/src/main/cpp/common/: ffmpeg_utils.c  ffmpeg_utils.h
medialibrary/src/main/cpp/factory/: entity_factory.c  entity_factory.h
medialibrary/src/main/cpp/include/: Condition.h  Errors.h
medialibrary/src/main/cpp/mediaplayer/: h_audio.cpp  h_audio.h  h_ffmpeg.cpp  h_ffmpeg.h  h_java_call.cpp  h_java_call.h  h_media_player.cpp  h_play_status.cpp  h_play_status.h  h_queue.cpp  h_queue.h  h_stataus.h  h_video.cpp  h_video.h
medialibrary/src/main/cpp/player/android/: h_native_media_player.cpp
medialibrary/src/main/cpp/player/source/player/: MediaPlayer.cpp  MediaPlayer.h
medialibrary/src/main/cpp/testplayer/: h_audio.h  h_base_player.cpp  h_base_player.h  h_ffmpeg.cpp  h_ffmpeg.h  h_play_status.cpp
medialibrary/src/main/cpp/videoeditor/: CMakeLists.txt  aac.c  android_log.h  ffmpeg_utils.c  ffmpeg_utils.h  test.c  video2image.c  video2image.h  videoEditor.cpp  videoEditor.h  video_cut.cpp  video_cut.h
medialibrary/src/main/java/com/h/arrow/medialib/mediaplayer/: HBaseMediaPlayer.java  HMediaPlayer.java  HNativeMediaPlayer.java  HTimedText.java  IMediaPlayer.java  TimeBean.java
medialibrary/src/main/java/com/h/arrow/medialib/mediaplayer/listener/: HOnCompleteListener.java  HOnCutVideoImgListener.java  HOnErrorListener.java  HOnGlSurfaceViewOncreateListener.java  HOnInfoListener.java  HOnLoadListener.java  HOnPreparedListener.java  HOnRenderRefreshListener.java  HOnStopListener.java  HStatus.java
medialibrary/src/main/java/com/h/arrow/medialib/mediaplayer/view/: HGLRender.java  HGLSurfaceView.java  ShaderUtils.java
medialibrary/src/main/java/com/h/arrow/medialib/utils/: TimeUtil.java
medialibrary/src/main/java/com/h/arrow/medialib/videoeditor/: VideoEditor.java
medialibrary/src/test/java/com/ah/me/player/: ExampleUnitTest.java
